# QtMindMap

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: windows.yml
resources/translations/: qtmindmap_en_US.ts  qtmindmap_zh_CN.ts  translations.qrc
src/: infinitecanvas.cpp  infinitecanvas.h  main.cpp  mainwindow.cpp  mainwindow.h  pch.h
